<resources>
    <string name="app_name">OHAP Client esde21</string>

    <string name="action_settings">Settings</string>

    <string name="action_newServer">Add server</string>

    <!-- Activity_device strings -->

    <string name="DeviceNameHint">Name of the device</string>
    <string name="DeviceDescriptionHint">Description of the device</string>
    <string name="DevicePathHint">>Container Hierarchy&#60;</string>
    <string name="DeviceSwitchText">DEVICE STATUS</string>
    <string name="DeviceNameHelpText">DEVICE NAME</string>
    <string name="DeviceDescriptionHelpText">DESCRIPTION</string>
    <string name="DeviceTypeHelpText">DEVICE TYPE</string>
    <string name="DeviceTypeHint">Type of the device</string>
    <string name="DeviceSetValue">CHANGE</string>
    <string name="DeviceTypeActuator">Actuator</string>
    <string name="DeviceTypeSensor">Sensor</string>
    <string name="title_activity_item_list">ItemListActivity</string>
    <string name="action_enable_monitoring">Enable monitoring</string>
    <string name="action_disable_monitoring">Disable monitoring</string>
    <string name="action_set_sensor">Toggle Sensors</string>
    <string name="device_sensorEnable">Sensors enabled</string>
    <string name="device_sensorDisable">Sensors disabled</string>
    <string name="device_sensorToSigMo">Sensor set to Significant Motion</string>
    <string name="device_sensorToAccel">Sensor set to Accelerometer</string>
    <string name="device_sensorToast">a new random value set for the device: </string>


    <!--entry_activity strings -->
    <string name="entryActivity_infoText">Hello! Welcome to OHAP smart-home remote device app thingy!</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="entryActivity_buttonText">ENTER</string>

    <!--preference strings -->
    <string name="preferences_password">Password</string>
    <string name="preferences_userName">User name</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="prefences_urlError">Sorry, entered URL was malformed, default URL restored</string>
    <string name="preferences_setSensor">Sensor status</string>
    <string name="preferences_chooseSensor">Choose sensor</string>
    <string name="preferenceCategory_server">SERVER 1 PREFERENCES</string>
    <string name="preferenceCategory_loginInfo">LOGIN INFORMATION</string>
    <string name="preferenceCategory_sensors">DEVICES</string>


    <!-- preference default values -->
    <string name="pref_URL_default">http://ohap.opimobi.com:18000/</string>
    <string name="pref_userName_default">Domuska</string>
    <string name="pref_password_default">ra7f2mYL</string>

    <!-- preference field names -->
    <string name="pref_field_URL">Server 1</string>
    <string name="pref_field_userName">pref_key_userName</string>
    <string name="pref_field_password">pref_key_password</string>
    <string name="pref_field_sensor">pref_key_sensor</string>
    <string name="pref_field_sensorlist">pref_key_sensorlist</string>

</resources>
