<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preferenceCategory_sensors"
        android:key="DEFAULT_DEVICE_PREFERENCE_CATEGORY">


        <ListPreference
            android:key="@string/pref_field_sensorlist"
            android:title="@string/preferences_chooseSensor"
            android:entries="@array/pref_sensorlist_entries"
            android:entryValues="@array/pref_sensorlist_entryvalues"
            android:defaultValue="None" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/preferenceCategory_server"
        android:key="DEFAULT_SERVER_PREFERENCE_CATEGORY">

        <EditTextPreference
            android:key="@string/pref_field_URL"
            android:title="URL"
            android:summary=""
            android:defaultValue="@string/pref_URL_default" />


        <EditTextPreference
            android:key="@string/pref_field_userName"
            android:title="@string/preferences_userName"
            android:defaultValue="@string/pref_userName_default" />

        <EditTextPreference
            android:key="@string/pref_field_password"
            android:title="@string/preferences_password"
            android:defaultValue="@string/pref_password_default"/>


    </PreferenceCategory>

</PreferenceScreen>