<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".DeviceActivity">



    <item android:id="@+id/monitor_enable"
        android:title="@string/action_enable_monitoring"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:icon="@drawable/ic_sync_black_24dp"/>

    <item
        android:id="@+id/monitor_disable"
        android:title="@string/action_disable_monitoring"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:icon="@drawable/ic_sync_disabled_black_24dp"/>

    <item
        android:id="@+id/sensor_enable_disable"
        android:title="@string/action_set_sensor"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:icon="@drawable/ic_android_black_24dp" />



</menu>
